# catia-autoblade

./: .gitignore  LICENSE  README.md  config.toml  create_blade.py  create_blade_pycatia.py  pyproject.toml
input/: airfoil_sc1095.csv  airfoil_sc1095_sharp.csv  airfoil_sd7032.csv  section_params.csv
src/catia_autoblade/: __init__.py  batch_create_blade.py  cli.py  create_blade.py
src/catia_autoblade/commands/: batch.py  config.py  create.py  list.py
src/catia_autoblade/config/: manager.py  settings.py
src/catia_autoblade/core/: batch.py  create_blade.py
src/catia_autoblade/interactive/: prompts.py
src/catia_autoblade/utils/: file_scanner.py
