[project]
name = "Catia_AutoBlade"
dynamic = ["version"]
description = "CATIA automation tool for creating blades"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Laxpud", email = "mi.shore@foxmail.com"}
]
keywords = ["catia", "automation", "blade", "cad"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "pywin32>=302",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
cablade = "catia_autoblade.create_blade:main"
catblade-batch = "catia_autoblade.batch_create_blade:main"

[project.urls]
Repository = "https://github.com/YangFan/Catia_AutoBlade"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/catia_autoblade/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true