[project]
name = "catia-autoblade"
dynamic = ["version"]
description = "CATIA automation tool for creating blades"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Laxpud", email = "mi.shore@foxmail.com"}
]
keywords = ["catia", "automation", "blade", "cad"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "pywin32>=302",
    "inquirer>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
autoblade-single = "catia_autoblade.create_blade:main"
autoblade-batch = "catia_autoblade.batch_create_blade:main"
autoblade = "catia_autoblade.cli:main"

[project.urls]
Repository = "https://github.com/Laxpud/catia-autoblade"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/catia_autoblade/__init__.py"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true