[project]
name = "catia-autoblade"
dynamic = ["version"]
description = "CATIA automation tool for creating blades"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Laxpud", email = "mi.shore@foxmail.com"}
]
keywords = ["catia", "automation", "blade", "cad"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "pywin32>=302",
    "typer>=0.15",
    "questionary>=2.0",
    "pydantic>=2.0",
    "tomlkit>=0.13",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
autoblade = "catia_autoblade.cli:app"
autoblade-create = "catia_autoblade.commands.create:run_create_command"
autoblade-batch = "catia_autoblade.commands.batch:run_batch_command"

[project.urls]
Repository = "https://github.com/Laxpud/catia-autoblade"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/catia_autoblade/__init__.py"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true